[gd_scene load_steps=4 format=2]

[ext_resource path="res://Game.gd" type="Script" id=1]
[ext_resource path="res://Pucca.tscn" type="PackedScene" id=2]
[ext_resource path="res://GameUI.tscn" type="PackedScene" id=3]

[node name="Game" type="Node2D"]
script = ExtResource( 1 )

[node name="Pucca" parent="." instance=ExtResource( 2 )]
visible = false

[node name="NegaPucca" parent="." instance=ExtResource( 2 )]
visible = false
self_modulate = Color( 1, 0, 0, 1 )
pucca_type = 1

[node name="GameUI" parent="." instance=ExtResource( 3 )]

[node name="GameTimer" type="Timer" parent="."]
wait_time = 30.0

[connection signal="cliked" from="Pucca" to="." method="_on_Pucca_cliked"]
[connection signal="cliked" from="NegaPucca" to="." method="_on_NegaPucca_cliked"]
[connection signal="cleared_save" from="GameUI" to="." method="_on_GameUI_cleared_save"]
[connection signal="started" from="GameUI" to="." method="_on_GameUI_started"]
[connection signal="timeout" from="GameTimer" to="." method="_on_GameTimer_timeout"]
